// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Header - test Header Complex - snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgb(255, 255, 255)",
      "display": "flex",
      "paddingBottom": 0,
      "paddingTop": 10,
      "zIndex": -1,
    }
  }
  testID="header"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "height": 40,
        "justifyContent": "center",
        "marginHorizontal": 5,
        "marginTop": 12,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": undefined,
          "borderRadius": 10,
          "borderWidth": 1,
          "justifyContent": "center",
          "margin": 0,
          "marginRight": 5,
          "minHeight": 25,
          "minWidth": 25,
          "padding": 1,
        }
      }
    >
      <View
        style={
          Object {
            "margin": 0,
            "padding": 0,
          }
        }
      >
        <
          icon={
            Object {
              "icon": Array [
                640,
                512,
                Array [
                  "wifi-3",
                  "wifi-strong",
                ],
                "f1eb",
                "M54.2 202.9C123.2 136.7 216.8 96 320 96s196.8 40.7 265.8 106.9c12.8 12.2 33 11.8 45.2-.9s11.8-33-.9-45.2C549.7 79.5 440.4 32 320 32S90.3 79.5 9.8 156.7C-2.9 169-3.3 189.2 8.9 202s32.5 13.2 45.2 .9zM320 256c56.8 0 108.6 21.1 148.2 56c13.3 11.7 33.5 10.4 45.2-2.8s10.4-33.5-2.8-45.2C459.8 219.2 393 192 320 192s-139.8 27.2-190.5 72c-13.3 11.7-14.5 31.9-2.8 45.2s31.9 14.5 45.2 2.8c39.5-34.9 91.3-56 148.2-56zm64 160a64 64 0 1 0 -128 0 64 64 0 1 0 128 0z",
              ],
              "iconName": "wifi",
              "prefix": "fas",
            }
          }
          size={18}
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 0,
        "marginTop": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "margin": 5,
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flexDirection": "row",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="25.2"
            bbWidth="50.4"
            fill="rgb(28, 28, 30)"
            focusable={false}
            height={25.2}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "marginBottom": 6,
                },
                Object {
                  "flex": 0,
                  "height": 25,
                  "width": 50,
                },
              ]
            }
            vbHeight={147.85}
            vbWidth={282.84}
            width={50.4}
            xml="<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
  <svg viewBox=\\"0 0 282.84 147.85\\">
    <polygon points=\\"34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62\\"/>
    <polygon points=\\"180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03\\"/>
    <path d=\\"m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z\\"/>
  </svg>"
          >
            <RNSVGGroup
              fill={
                Object {
                  "payload": 4280032286,
                  "type": 0,
                }
              }
              propList={
                Array [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62z"
                fill={
                  Object {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              />
              <RNSVGPath
                d="M180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03z"
                fill={
                  Object {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              />
              <RNSVGPath
                d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"
                fill={
                  Object {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              Object {
                "color": "rgb(28, 28, 30)",
                "fontSize": 36,
                "fontWeight": "700",
                "margin": 0,
                "padding": 0,
              }
            }
            testID="undefined.big-part"
          >
             1.1234
          </Text>
          <Text
            style={
              Object {
                "color": "rgb(28, 28, 30)",
                "fontSize": 25.2,
                "margin": 0,
                "marginBottom": 2.4,
                "padding": 0,
              }
            }
            testID="undefined.small-part"
          >
            5678
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "flexWrap": "wrap",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(28, 28, 30)",
          "fontSize": 18,
          "fontWeight": "600",
          "opacity": 1,
          "paddingHorizontal": 5,
        }
      }
      testID="transaction text"
    >
      title
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "left": 0,
        "padding": 11.5,
        "position": "absolute",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="text translated"
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginRight": 5,
            "opacity": 1,
          }
        }
        testID="header.drawmenu"
      >
        <
          color="rgb(216, 216, 216)"
          icon={
            Object {
              "icon": Array [
                448,
                512,
                Array [
                  "navicon",
                ],
                "f0c9",
                "M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z",
              ],
              "iconName": "bars",
              "prefix": "fas",
            }
          }
          size={45}
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "padding": 15,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/img/logobig-zingo.png",
        }
      }
      style={
        Object {
          "borderRadius": 10,
          "height": 38,
          "resizeMode": "contain",
          "width": 38,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "rgb(0, 122, 255)",
        "height": 1,
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`Component Header - test Header Simple - snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgb(255, 255, 255)",
      "display": "flex",
      "paddingBottom": 0,
      "paddingTop": 10,
      "zIndex": -1,
    }
  }
  testID="header"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "height": 40,
        "justifyContent": "center",
        "marginHorizontal": 5,
        "marginTop": 12,
      }
    }
  />
  <View
    style={
      Object {
        "height": 20,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "flexWrap": "wrap",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(28, 28, 30)",
          "fontSize": 18,
          "fontWeight": "600",
          "opacity": 1,
          "paddingHorizontal": 5,
        }
      }
    >
      title
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "left": 0,
        "padding": 11.5,
        "position": "absolute",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "padding": 15,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/img/logobig-zingo.png",
        }
      }
      style={
        Object {
          "borderRadius": 10,
          "height": 38,
          "resizeMode": "contain",
          "width": 38,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "rgb(0, 122, 255)",
        "height": 1,
        "width": "100%",
      }
    }
  />
</View>
`;
